--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#363636">
 
 
@@ -38,7 +39,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@id/view4"
-        android:layout_toEndOf="@+id/view1"
+        android:layout_toEndOf="@+id/view5"
         android:background="#99CDCC"
         android:cursorVisible="false"
         android:textAlignment="textEnd"
@@ -51,7 +52,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/etNumber"
         android:background="#99CDCC"
-        android:layout_toEndOf="@+id/view1"
+        android:layout_toEndOf="@+id/view5"
         android:textAlignment="textEnd"
         android:textColor="@color/darkG"
         android:layout_toStartOf="@id/view4"
@@ -93,15 +94,6 @@
         android:layout_marginEnd="7dp"
         />
 
-    <View
-        android:id="@+id/view1"
-        android:layout_width="3dp"
-        android:layout_height="101dp"
-        android:background="@drawable/grad_screen_dark1"
-        android:layout_below="@+id/view2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="7dp"/>
-
     <it.ticandtac.primecalculator.MyViews.MyKeyboard
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
@@ -134,4 +126,24 @@
         android:textAlignment="center"
         android:textColor="#D62636"
         />
+
+    <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+        android:id="@+id/TLdots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/functions_"
+        android:layout_alignTop="@+id/etNumber"
+        android:layout_alignEnd="@+id/functions_"
+        android:layout_alignBottom="@+id/keyboard"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="155dp"
+        android:layout_marginBottom="300dp"
+        app:trailingcircular_animDelay="200"
+        app:trailingcircular_animDuration="1200"
+        app:trailingcircular_bigCircleRadius="0dp"
+        app:trailingcircular_dotsColor="@color/loader_selected"
+        app:trailingcircular_dotsRadius="0dp"
+        app:trailingcircular_noOfTrailingDots="5" />
+
 </RelativeLayout>
