--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#ff0000</color>
     <color name="blueSky">#3498A0</color>
     <color name="darkG">#262626</color>
+    <color name="dotColor">#181D83</color>
 
 
 
